# playground

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: codeql.yml  python-app.yml
algorithms/: base_algorithms.py  divide_and_conquer.py  graph_algorithms.py  greedy_algorithms.py  travelling_salesman.py  trees.py
data/: drugs.csv
notebooks/: drugs.ipynb  ml_stanford.ipynb  python.ipynb  pytoch.ipynb
tasks/: find_single_number.py  lru_cache.py  rate_limiter.py  xor_demo.py
tests/: __init__.py  test_algorithms.py  test_graph_algorithms.py  test_tasks.py
utils/: __init__.py  datetime.py  decorators.py  exceptions.py
