[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["NickiHell <nickihell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
isort = "*"
taskipy = "*"
flakehell = "*"
wemake-python-styleguide = "*"
flake8-functions = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
isort = "isort src"
isort-lint = "isort --check-only src"
flakehell-lint = "flakehell lint --jobs 8"


[tool.flakehell]
#baseline = ".flakehell_baseline"
extended_default_ignore = [] # https://github.com/flakehell/flakehell/issues/10
format = "grouped"
max_complexity = 10
max_function_length = 24
max_line_length = 120
show_source = true
statistics = true

[tool.flakehell.plugins]
flake8 = ["+*"]
flake8-functions = ["+*"]
flake8-eradicate = ["+*"]
flake8-bugbear = ["+*"]
flake8-comprehensions = ["+*"]
flake8-commas = ["+*"]
flake8-quotes = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E501"]
wemake-python-styleguide = ["+*", "-WPS305"]
